# mcp-agent-external-memory

./: .gitignore  .mcp.json  LIBRARY_USAGE.md  README.md  ai-memo.md  pyproject.toml
.cursor/: mcp.json
archive/: CSVインポートツール_フィードバック.md  MCP機能追加依頼_CSVインポート.md
design/: DATABASE_MCP_GENERIC_FEATURES.md  設計書.md
src/: __init__.py  __main__.py  db_operations.py  server.py
tests/: test_mcp_server.py  test_server.py  test_server_simple.py  test_tools_direct.py
tests/export_test/csv_all/: orders.csv  users.csv
tests/export_test/json_all/: orders.json  users.json
tests/validation/: MCP_TEST_REQUEST.md  MCP_TEST_REQUEST_COMPLETED.md
